# tattoo_design

./: .flake8  .vscode  Dockerfile  README.md  docker-compose.yml  process.py  pyproject.toml
figures/: example.pdf_tex
