[tool.poetry]
name = "tattoo_design"
version = "0.1.0"
description = ""
authors = ["Shaun Barry <shaunbarry365@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
matplotlib = "^3.5.2"
hyperbolic = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
